<resources>
<string name="app_name">TODO4</string>
        <string name="añadir">Añadir</string>
        <string name="opEliminiar">Eliminar</string>
        <string name="opModificar">Modificar</string>
        <string name="title_activity_main2">Main2Activity</string>
        <string name="lblNombre">Texto:</string>
        <string name="pistaNombre">texto...</string>
        <string name="btGuardar">Guardar</string>
        <string name="btFecha">fecha...</string>
        <string name="btCancelar">Cancelar</string>
        <string name="lblfecha">Seleccionar fecha</string>
    </resources>


